# pyxspress

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENCE.rst  README.md  README.rst  pyproject.toml
src/pyxspress/: __init__.py
src/pyxspress/cli/: acquisition.py  create_config.py  data_gui.py  list_mode_data_check.py  list_mode_decode.py  list_mode_listener.py  plot_data.py  switch_mode.py
src/pyxspress/create_config/: config_generator.py
src/pyxspress/create_config/common/: stXspressADOdin.sh
src/pyxspress/create_config/modules/: adodin_config.py  create_expanded_substitutions.py  create_frame_processors.py  create_frame_receivers.py  create_gui.py  create_meta_liveView.py  create_server_config.py  fp_config.py  fr_config.py  meta_config.py  odin_launcher.py  odin_server_config.py  proc_serv_gui.py  proc_serv_ioc.py
src/pyxspress/create_config/templates/: adodin_ioc.boot.template  fp.json.template  fr.json.template  gui_button.template  gui_proc_serv.edl.template  launch_nchan_odin.sh.template  odin_proc_serv_ioc.yaml.template  odin_server.cfg.template  proc_serv_ioc.boot.template  stFrameProcessor.template  stFrameReceiver.template  stLiveViewMerge.sh.template  stMetaWriter.sh.template  xspress_expanded.substitutions.template
src/pyxspress/data/: __init__.py  file_reader_interface.py  util.py  xspress_list_file_reader.py  xspress_mca_file_reader.py
src/pyxspress/gui/: __init__.py  chart.py  main_window.py  util.py
src/pyxspress/list_mode/: __init__.py  list_mode_decoder.py  list_mode_listener.py  list_mode_writer.py  run_listener.py
src/pyxspress/odin_testing/: __init__.py  list_mode_order.py
src/pyxspress/switch_mode/: processes_stop.py  start_new_mode.py
src/pyxspress/switch_mode/data/: config.json
src/pyxspress/util/: __init__.py  loggable.py  util.py
test_files/: example_A_file.h5
test_files/config_8Ch/: fp1.json  fp2.json  fp3.json  fp4.json  launch_8chan_odin.sh  stControlServer.sh  stFrameReceiver2.sh  stxspress.boot
test_files/config_8Ch_Mk2/: fp3.json  fp4.json  fr1.json  fr4.json  odin_proc_serv_ioc.yaml  odin_server.cfg  stFrameProcessor1.sh  stFrameProcessor3.sh  stFrameProcessor4.sh  stOdinProcServControl.sh  stOdinServer.sh  stProcServControl.sh
test_files/config_8Ch_marker/: fp1.json  odin_server.cfg  proc_serv_ioc.boot  stxspress.boot
test_files/config_8Ch_marker_Mk2/: fp1.json  fr2.json  fr3.json  stFrameProcessor2.sh  stxspress.boot  xspress.json  xspress_expanded.substitutions
test_files/config_8Ch_tcp_relay/: fp1.json  fp3.json  fp4.json  odin_server.cfg  stFrameReceiver3.sh  stLiveViewMerge.sh  stMetaWriter.sh  stxspress.boot
test_files/config_8Ch_tcp_relay_Mk2/: ODNProcServ.edl  fp2.json  launch_8chan_odin.sh  launch_gui.sh  stFrameReceiver1.sh  stFrameReceiver4.sh  stTcpRelay.sh
test_files/example_mca_data/: test-mca-1_A_000000.h5  test-mca-1_B_000000.h5  test-mca-1_C_000000.h5  test-mca-1_D_000000.h5  test-mca-1_meta.h5
tests/: conftest.py
tests/test_cli/: test_cli_create_config.py
tests/test_create_config/: test_config_generator.py  test_create_config_full.py  test_create_frame_processors.py  test_create_frame_receivers.py  test_create_meta.py  test_create_odin_launch.py  test_create_proc_serv.py  test_create_server_config.py  test_expanded_substitutions.py  test_gui.py
tests/test_create_config/test_modules/: test_adodin_config.py  test_fp_config.py  test_fr_config.py  test_meta_config.py  test_odin_launcher.py  test_odin_server_config.py  test_proc_serv_gui.py  test_proc_serv_ioc.py  util.py
tests/test_data/: test_util.py
tests/test_odin_testing/: test_list_mode_order.py
tests/test_switch_mode/: test_switch_mode.py
